--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,46 +1,21 @@
 <idea-plugin>
     <id>com.notime.intellijPlugin.backgroundImagePlus</id>
-    <name>Background Image Plus +</name>
+    <name>Background Image From Bing</name>
     <version>1.0.2</version>
-    <vendor email="" url="https://github.com/HNUHell/backgroundImagePlus">
-        HNUHell
+    <vendor email="3099916791@qq.com" url="https://github.com/Saturnluohao/backgroundImagePlus.git">
+        Saturnluohao
     </vendor>
 
     <description><![CDATA[
-      Set the editor background to a random picture from a folder.<br>
-      Forked from https://github.com/lachlankrautz/backgroundImagePlus.<br>
-      But optimized for change function.<br>
-      reference fork:<br>
-            https://github.com/godfather1103/backgroundImagePlus<br>
-            https://github.com/zhanglanzhu521/backgroundImagePlus<br>
+      Set the editor background to picture from Bing.<br>
+      Forked from https://github.com/HNUHell/backgroundImagePlus.<br>
     ]]></description>
 
     <change-notes>
         <![CDATA[<html>
-        <h3>1.0.2</h3>
+        <h3>v1.0 (Forked from https://github.com/HNUHell/backgroundImagePlus)</h3>
         <ul>
-          <li>修正定时任务运行场景（当在它的settings窗口时定时任务不再运行）。  Correct timing task runtime environment(Timed tasks are no longer running when in it's settings window).</li>
-        </ul>
-        <h3>1.0.1-dev</h3>
-        <ul>
-          <li>改变随机模式（之前为每次随机取一张，现在为将所有图片进行“洗牌”，然后一一取出，取完一轮或者改变文件目录后重新“洗牌”）。  Change the random mode(Previously, each time we randomly take one, now all the images are "shuffled" , then take them out one by one, and then "shuffle" after finishing a round or changing the file directory).</li>
-          <li>支持重新“洗牌”。  Support reshuffle.（View | Random Order Reset）</li>
-        </ul>
-        <h3>1.0</h3>
-        <ul>
-          <li>删除不透明度设置（原生支持，不需要增加此功能。见"File | Settings | Appearance & Behavior | Appearance | BACKGROUND IMAGE..."）。  Delete opacity settings(Native support，no need for this settings. See "File | Settings | Appearance & Behavior | Appearance | BACKGROUND IMAGE...").</li>
-          <li>支持变化模式设置。  Add Change mode settings.</li>
-        </ul>
-        <h3>0.9</h3>
-        <ul>
-          <li>修复自动变化的功能。   Fix automatic changes.</li>
-          <li>支持时间多样性。  Support time diversity.</li>
-          <li>支持不透明度设置。  Support opacity settings</li>
-        </ul>
-        <h3>v1.2.1 (Old versions from https://github.com/lachlankrautz/backgroundImagePlus)</h3>
-        <ul>
-          <li>增加设置页。  Added settings page.</li>
-          <li>增加目录项。  Added menu items.</li>
+          <li>Picture from Bing as the background</li>
         </ul>
         </html>]]>
     </change-notes>
@@ -53,6 +28,7 @@
 
     <!-- uncomment to enable plugin in all products -->
     <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.platform.images</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <applicationConfigurable groupId="appearance" groupWeight="20" id="background.image.plus"
@@ -66,11 +42,6 @@
             <separator/>
             <action id="setBackgroundImage" class="com.notime.intellijPlugin.backgroundImagePlus.action.SetBackgroundImage"
                     text="Set Background Image"/>
-            <action id="randomBackgroundImage"
-                    class="com.notime.intellijPlugin.backgroundImagePlus.action.RandomBackground"
-                    text="Random Background Image"/>
-            <action id="randomOrderReset" class="com.notime.intellijPlugin.backgroundImagePlus.action.RandomOrderReset"
-                    text="Random Order Reset"/>
             <action id="clearBackgroundImage"
                     class="com.notime.intellijPlugin.backgroundImagePlus.action.ClearBackground"
                     text="Clear Background Image"/>
